# tetris_grille

./: MANIFEST.in  README.md  pyproject.toml  setup.cfg  tetris_grille.sln  tetris_grille.spec
tetris_grille/: __init__.py  resources.py  tetris_grille.py  tetris_grille.pyproj
tetris_grille.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tetris_grille/classe/bouton/: Bouton.py
tetris_grille/classe/brique/: brique.py
tetris_grille/classe/case/: Case.py
tetris_grille/classe/grille/: Grille.py
tetris_grille/classe/player/: Player.py
tetris_grille/env/Scripts/: activate  activate.bat
tetris_grille/image/brique/: brique_rouge_2.png~  spr_brique.kra
tetris_grille/sounds/son_music/: son_music.yy
