[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tetris_grille"
version = "1.0"
description = "Une bibliothèque pour gérer des grilles Tetris"
authors = ["Ton Nom <ton@email.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.0"
numpy = "^1.21.0"

[tool.poetry.scripts]
tetris_grille = "tetris_grille:main"  # Si tu veux une commande CLI après installation
