[tool.poetry]
name = "tetris-grille"
version = "0.1.0"
description = "Grille Tetris avec Pygame, packagée pour réutilisation"
authors = ["rhoods <36036653+rhoods@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "tetris_grille"}]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.0"
numpy = "^1.21.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
