[metadata]
name = tetris-grille
version = 0.1.0
description = Grille Tetris avec Pygame, packagée pour réutilisation
license = MIT

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    pygame>=2.5
    numpy>=1.21

[options.package_data]
tetris_grille =
    font/**
    image/**
    sounds/**
    record/**


